<resources>
    <string name="app_name">PLANR Project Three</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="requesting_sms_permission">Requesting SMS Permission</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="header">PLANR</string>
    <string name="add_data">Add Data</string>
</resources>