<!-- activity_login.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/header"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textAlignment="center"
        android:fontFamily="serif"/>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/editTextUsername"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="150dp"
        android:text="@string/login"
        android:textSize="60sp" />

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/create_account"
        android:textSize="50sp"/>

</RelativeLayout>